# Machinevision-Selfdrivingcar

./: .gitignore  README.md  dataset
experiments/CNN/: CMakeLists.txt  Image.cpp  Image_object.cpp  Object.cpp  a.out  cnn.cpp
experiments/cnn_py/: create_dataset.py  datareader.py  dataset_to_tensor.py  main.py  read_dataset.py  test.py  untitled.py  yolo.py
experiments/filter/: CMakeLists.txt  filters.cpp  filters_test.cpp
experiments/histogram/: .session.vim  CMakeLists.txt  main.cpp
experiments/homo_transform/: CMakeLists.txt  main.cpp
experiments/lane_detection/: CMakeLists.txt  debug_stuff.cpp  debug_stuff.hpp  fack.cpp  sobel_webcam.cpp
experiments/line_detection/: CMakeLists.txt  README.md  hough_test.cpp  main.cpp
experiments/masking/: .session.vim  CMakeLists.txt  main.cpp
experiments/proposal/: project_proposal.tex
experiments/segmentation/: CMakeLists.txt  segmentation.cpp
experiments/video_reader/: CMakeLists.txt  main.cpp
project/: .session.vim  histogram.cpp  lane.cpp
project/cpp/: CMakeLists.txt
project/cpp/includes/: debug_stuff.hpp  shapes.cpp
project/includes/: debug_stuff.cpp  histogram.cpp  histogram.hpp  shapes.hpp
project/lane_detection/: lane_detection.py
project/python/: datareader.py  lane.py  lane2.py  lanefinder.py  main.py  shapes.py
project/yolo/: datareader.py  datareader_OLD.py  main.py  train.py
